# diarization

./: .gitignore  README.md  diarization.py  generate_ground_truth.py  generate_vad_rttm.py  mix_vad_to_diarization_gt.py  preprocess.py  pyproject.toml  utils.py  vad.py
data/: ch1-netfrix.json  ch2-nitzan-hadar.json  ch3-roi.json  mixed.json
notebooks/: evaluate.ipynb
